--- a/Windows_version/User Script.ipynb
+++ b/Windows_version/User Script.ipynb
@@ -18,12 +18,56 @@
    "outputs": [],
    "source": [
     "from MakeCSV import makecsv\n",
-    "from ROIData import ROIData\n",
+    "from  ROIData import ROIData_basic,ROIData_std, ROIData_180sec,ROIData_edit\n",
     "from Sparklines import Sparklines\n",
     "from SaveTriggers import SaveTriggers\n",
     "data_folder = input(\"input the folder that contains .tdms file:\")\n",
-    "makecsv(data_folder)\n",
-    "ROIData(data_folder)"
+    "makecsv(data_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6f564a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for time section 0,180,1260,1440\n",
+    "ROIData_basic(data_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54e64b53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for time section 0,180,720,1260,1440\n",
+    "ROIData_std(data_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63625407",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for time section every 3 mins\n",
+    "ROIData_180sec(data_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a78b6da7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for editable time period\n",
+    "# ROIData_edit(data_folder,TMIN,TMAX)\n",
+    "ROIData_edit(data_folder,[0,100,200,300],[100,200,300,400])"
    ]
   },
   {
