--- a/Windows_version/MergeSheet.ipynb
+++ b/Windows_version/MergeSheet.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ee9d0a52",
+   "execution_count": 1,
+   "id": "881716e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,28 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "607ee181",
+   "execution_count": 5,
+   "id": "b720b4af",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please input stimulus folder name:WT_2 20% ETOH_stimL\n",
-      "please input control folder name:WT_2 20% ETOH_stimR\n"
+      "Input folder name which have STIMULUS in left ROI:stimL\n",
+      "Input folder name which have CONTROL in left ROI:controlL\n",
+      "if doing stimulus merging, input 1, control merging input 00\n"
      ]
     }
    ],
    "source": [
-    "stim_folder = input('please input stimulus folder name:')\n",
-    "control_folder = input('please input control folder name:')"
+    "stim_folder = input('Input folder name which have STIMULUS in left ROI:')\n",
+    "control_folder = input('Input folder name which have CONTROL in left ROI:')\n",
+    "flag = input('if doing stimulus merging, input 1, control merging input 0:')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "bd163a28",
+   "execution_count": 6,
+   "id": "305c6b58",
    "metadata": {},
    "outputs": [
     {
@@ -49,9 +51,9 @@
      "output_type": "stream",
      "text": [
       "stimulus files:\n",
-      " ['E:\\\\SAZA\\\\SAZA\\\\Windows_version/WT_2 20% ETOH_stimL\\\\WT_2 20% ETOH_stimL_ROI_180sec.xlsx', 'E:\\\\SAZA\\\\SAZA\\\\Windows_version/WT_2 20% ETOH_stimL\\\\WT_2 20% ETOH_stimL_ROI_basic.xlsx', 'E:\\\\SAZA\\\\SAZA\\\\Windows_version/WT_2 20% ETOH_stimL\\\\WT_2 20% ETOH_stimL_ROI_edit.xlsx', 'E:\\\\SAZA\\\\SAZA\\\\Windows_version/WT_2 20% ETOH_stimL\\\\WT_2 20% ETOH_stimL_ROI_std.xlsx']\n",
+      " ['C:\\\\Users\\\\ASMLabUser1\\\\Desktop\\\\SAZA_windows/stimL\\\\Stimulus left, control right_ROI_std.xlsx']\n",
       "control files:\n",
-      " ['E:\\\\SAZA\\\\SAZA\\\\Windows_version/WT_2 20% ETOH_stimR\\\\WT_2 20% ETOH_stimR_ROI_180sec.xlsx', 'E:\\\\SAZA\\\\SAZA\\\\Windows_version/WT_2 20% ETOH_stimR\\\\WT_2 20% ETOH_stimR_ROI_basic.xlsx', 'E:\\\\SAZA\\\\SAZA\\\\Windows_version/WT_2 20% ETOH_stimR\\\\WT_2 20% ETOH_stimR_ROI_edit.xlsx', 'E:\\\\SAZA\\\\SAZA\\\\Windows_version/WT_2 20% ETOH_stimR\\\\WT_2 20% ETOH_stimR_ROI_std.xlsx']\n"
+      " ['C:\\\\Users\\\\ASMLabUser1\\\\Desktop\\\\SAZA_windows/controlL\\\\Stimulus right, control left_ROI_std.xlsx']\n"
      ]
     }
    ],
@@ -70,22 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "22f7ea08",
+   "execution_count": 11,
+   "id": "870d63f7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data merging for E:\\SAZA\\SAZA\\Windows_version/WT_2 20% ETOH_stimL\\WT_2 20% ETOH_stimL_ROI_180sec.xlsx\n",
-      "WT_2 20% ETOH_stimL_ROI_180sec.xlsx\n",
-      "data merging for E:\\SAZA\\SAZA\\Windows_version/WT_2 20% ETOH_stimL\\WT_2 20% ETOH_stimL_ROI_basic.xlsx\n",
-      "WT_2 20% ETOH_stimL_ROI_basic.xlsx\n",
-      "data merging for E:\\SAZA\\SAZA\\Windows_version/WT_2 20% ETOH_stimL\\WT_2 20% ETOH_stimL_ROI_edit.xlsx\n",
-      "WT_2 20% ETOH_stimL_ROI_edit.xlsx\n",
-      "data merging for E:\\SAZA\\SAZA\\Windows_version/WT_2 20% ETOH_stimL\\WT_2 20% ETOH_stimL_ROI_std.xlsx\n",
-      "WT_2 20% ETOH_stimL_ROI_std.xlsx\n",
+      "data merging for C:\\Users\\ASMLabUser1\\Desktop\\SAZA_windows/stimL\\Stimulus left, control right_ROI_std.xlsx\n",
+      "Stimulus left, control right_ROI_std.xlsx\n",
+      "doing control group merging---\n",
+      "doing control group merging---\n",
+      "doing control group merging---\n",
+      "doing control group merging---\n",
       "MERGING DONE!!!\n"
      ]
     }
@@ -107,15 +107,24 @@
     "    #print(stimsheetnames)\n",
     "    for j in range(int(len(stimsheetnames)/2)):\n",
     "        pairmerge = pd.DataFrame()\n",
-    "        stim_sheet_value = pd.read_excel(stimfiles[i],sheet_name=stimsheetnames[j])\n",
-    "        con_sheet_value = pd.read_excel(confiles[i],sheet_name=consheetnames[int(len(stimsheetnames)/2+j)])\n",
-    "        pairmerge = pd.concat([stim_sheet_value,con_sheet_value],axis = 0)\n",
+    "        \n",
+    "        if flag == '1':\n",
+    "            stim_sheet_value = pd.read_excel(stimfiles[i],sheet_name=stimsheetnames[j])\n",
+    "            con_sheet_value = pd.read_excel(confiles[i],sheet_name=consheetnames[int(len(stimsheetnames)/2+j)])\n",
+    "            pairmerge = pd.concat([stim_sheet_value,con_sheet_value],axis = 0)\n",
+    "            \n",
+    "        elif flag == '0':\n",
+    "            print('doing control group merging---')\n",
+    "            stim_sheet_value = pd.read_excel(stimfiles[i],sheet_name=stimsheetnames[int(len(stimsheetnames)/2+j)])\n",
+    "            con_sheet_value = pd.read_excel(confiles[i],sheet_name=consheetnames[j])\n",
+    "            pairmerge = pd.concat([stim_sheet_value,con_sheet_value],axis = 0)\n",
+    "        \n",
     "        merge_sheet_name = stimsheetnames[j].split('_')[0]\n",
     "        merge_sheet_name_list.append(str(merge_sheet_name))\n",
     "        dataframes_list.append(pairmerge)\n",
     "    #print(len(merge_sheet_name_list))\n",
     "    #print(len(dataframes_list))\n",
-    "    with pd.ExcelWriter(os.getcwd() + '/'+ merge_file_name, engine = 'xlsxwriter') as writer:\n",
+    "    with pd.ExcelWriter(os.getcwd() + '/Merging.xlsx', engine = 'xlsxwriter') as writer:\n",
     "        for k in range(len(dataframes_list)):\n",
     "            dataframes_list[k].to_excel(writer ,sheet_name = merge_sheet_name_list[k] ,index = False ,header = True)\n",
     "            \n",
@@ -124,8 +133,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "e6da5b27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doing control group merging\n"
+     ]
+    }
+   ],
+   "source": [
+    "if flag == '0':\n",
+    "    print('doing control group merging')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b6e6791b",
+   "id": "1b8f013c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -133,15 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b144fc3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a392fb4",
+   "id": "a6e45a1f",
    "metadata": {},
    "outputs": [],
    "source": []
